# termnotes

./: .gitignore  CLAUDE.md  DEMO.md  IMPLEMENTATION.md  LICENSE  Makefile  README.md  SCREENSHOTS.md  SUMMARY.md  go.mod  go.sum  pyproject.toml  requirements.txt
.github/workflows/: build.yml  release.yml
cmd/demo/: main.go
cmd/termnotes/: main.go  main_test.go
cmd/verify/: main.go
internal/models/: note.go
internal/storage/: backend.go  filesystem.go  store.go  store_test.go
internal/ui/: ui.go
scripts/: .args  add_dir_into_zip.py  add_to_zip.py
src/termnotes/: __init__.py  __main__.py  config.py  editor.py  focus.py  key_bindings.py  modes.py  note.py  note_list.py  storage.py  ui.py  utils.py
src/termnotes/storage/: __init__.py  base.py  composite_backend.py  encrypted_backend.py  filesystem_backend.py  gdrive_backend.py  sqlite_backend.py
termnotes/: __init__.py  database.py  main.py  models.py  storage.py  ui.py
