[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "termnotes"
version = "0.1.0"
description = "A vim-like text editor in your terminal"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "prompt_toolkit==3.0.52",
    "pygments==2.19.2",
    "google-auth==2.41.1",
    "google-auth-oauthlib==1.2.2",
    "google-auth-httplib2==0.2.0",
    "google-api-python-client==2.185.0",
    "python-docx==1.2.0",
]

[project.scripts]
termnotes = "termnotes.__main__:main"
